# my-todo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md  specification.md  todo.md
docs/dev/: concept.md  design.md  specification.md  todo.md
docs/readme/: concepts.md  installation.md  usage.md
src/: main.py
src/my_todo/: __init__.py  cli.py  db.py  editor.py  lifecycle.py
tests/: test_cli.py  test_db.py  test_lifecycle.py
