[project]
name = "my-todo"
version = "0.1.0"
description = "個人用TODO CLI: 自分の欲しい機能だけを備えた最小TODO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
todo = "my_todo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_todo"]

[dependency-groups]
dev = [
    "pytest>=8",
]
